# micropython-core2

./: .gitignore  README.md  config.py.example  main.py  main_test.py  pymakr.conf
boards/M5STACK_CORE2/: mpconfigboard.cmake  mpconfigboard.h  mpconfigboard.mk
boards/M5STACK_CORE2/modules/: axpili9342.py  ft6x36.py  inisetup.py  m5stack.py
components/: CMakeLists.txt  component.mk
components/axp192/: axp20x.c
components/axp192/include/: axp20x.h
components/ft6336u/: ft6336u.c
components/ft6336u/include/: ft6336u.h
components/i2cdev/: i2c_drv.c  i2cdev_esp32.c
components/i2cdev/include/: i2c_drv.h
components/mpu6886/: mpu6886.c
components/mpu6886/include/: mpu6886.h
examples/: boot.py  buttons.py  dragme.py
firmware/code/: Makefile  machine_axp192.c  machine_axp192.h  machine_bm8563.c  machine_bm8563.h  machine_ft6336u.c  machine_ft6336u.h  machine_i2s.c  machine_mpu6886.c  machine_mpu6886.h  modmachine.c  modmachine.h
firmware/code/GENERIC_SPIRAM/: mpconfigboard.mk
firmware/components/axp192/: axp20x.c
source/ports.esp32/: Makefile  machine_axp192.h  machine_bm8563.h  machine_ili9341.c  machine_mpu6886.h  modmachine.c  modmachine.h
src/: micropython.cmake
src/axp192/: machine_axp192.c  micropython.cmake  micropython.mk
src/bm8563/: machine_bm8563.c  micropython.cmake  micropython.mk
src/ft6336/: machine_ft6336u.c  micropython.cmake  micropython.mk
src/ili9341/: machine_ili9341.c  machine_ili9341.h  micropython.cmake  micropython.mk
src/mpu6886/: machine_mpu6886.c  micropython.cmake  micropython.mk
(+27 files in other folders)
